--- a/src/app/modals/quick-add-remote/quick-add-remote.component.html
+++ b/src/app/modals/quick-add-remote/quick-add-remote.component.html
@@ -19,7 +19,7 @@
     <mat-form-field class="full-width">
       <mat-label>Select Remote Type</mat-label>
       <mat-select formControlName="remoteType" (selectionChange)="onRemoteTypeChange()">
-        @for (remote of remoteTypes; track remote) {
+        @for (remote of remoteTypes; track remote.value) {
           <mat-option [value]="remote.value">
             {{ remote.label }}
           </mat-option>
