--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -339,7 +339,7 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
   & {
     /* Define custom colors for light mode */
     --app-background: #fafafa;
-    --secondary-background: rgb(255, 255, 255);
+    --secondary-background: #ffffff;
     --banner-background: #d4d4d7; //rgba(212, 212, 215, 0.85);
     --sidebar-background: #f5f5f5;
     --box-shadow: 0 0 0 1px rgba(232, 232, 233, 1),
@@ -348,11 +348,17 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
     --hover-color: rgb(200, 200, 200);
     --app-text-color: #000000;
     --secondary-text-color: #939090;
-    --secondary-text-color-rgb: 147, 144, 144;
     --button-hover: #dddddd;
     --theme-border: #dbdbdb;
     --faint-blue: #f0f8ff;
     --about-dialog-button-color: #ffffff;
+    
+    /* Define rgb variables for colors */
+    --app-background-rgb: 250, 250, 250;
+    --secondary-background-rgb: 255, 255, 255;
+    --app-text-color-rgb: 0, 0, 0;
+    --secondary-text-color-rgb: 147, 144, 144;
+
   }
 }
 
@@ -371,11 +377,17 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
     --hover-color: rgb(55, 55, 55);
     --app-text-color: #ffffff;
     --secondary-text-color: #939090;
-    --secondary-text-color-rgb: 147, 144, 144;
     --button-hover: #333;
     --theme-border: #555;
     --faint-blue: #464d50;
     --about-dialog-button-color: #333337;
+    
+    /* Define rgb variables for colors */
+    --app-background-rgb: 34, 34, 38;
+    --secondary-background-rgb: 0, 0, 0;
+    --app-text-color-rgb: 255, 255, 255;
+    --secondary-text-color-rgb: 147, 144, 144;
+    
   }
 }
 
@@ -426,6 +438,8 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
   --light-green: #{map.get($adwaita-green-palette, 300)};
   --light-orange: #{map.get($adwaita-orange-palette, 300)};
   --light-blue: #{map.get($adwaita-blue-palette, 300)};
+  --light-purple: #{map.get($adwaita-purple-palette, 300)};
+  --light-yellow: #{map.get($adwaita-yellow-palette, 300)};
   --red: #{map.get($adwaita-red-palette, 500)};
   --light-theme-color: #{map.get($adwaita-light-palette, 50)};
   --dark-theme-color: #{map.get($adwaita-light-palette, 900)};
@@ -643,6 +657,30 @@ button {
   }
   100% {
     box-shadow: 0 0 0 0 rgba(var(--yellow-rgb), 0);
+  }
+}
+
+@keyframes pulseMode {
+  0% {
+    box-shadow: 0 0 0 0 rgba(var(--mode-primary-color-rgb, var(--primary-color-rgb)), 0.5);
+  }
+  50% {
+    box-shadow: 0 0 0 16px rgba(var(--mode-primary-color-rgb, var(--primary-color-rgb)), 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(var(--mode-primary-color-rgb, var(--primary-color-rgb)), 0);
+  }
+}
+
+@keyframes pulseRed {
+  0% {
+    box-shadow: 0 0 0 0 rgba(var(--warn-color-rgb), 0.5);
+  }
+  50% {
+    box-shadow: 0 0 0 16px rgba(var(--warn-color-rgb), 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(var(--warn-color-rgb), 0);
   }
 }
 
